--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -145,7 +145,7 @@
   <data name="MC_XP" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MC_XP.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="system" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\system.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="systemIc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\systemIc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
